# galois

./: CMakeLists.txt  README.md
inputs/simple/: simple
inputs/test/: test.csv
lonestar/analytics/cpu/: CMakeLists.txt
lonestar/analytics/cpu/gnn/: CMakeLists.txt  gnn.cpp  gnn.h
lonestar/analytics/cpu/pagerank/: PageRank-pull.cpp
lonestar/analytics/distributed/: CMakeLists.txt
lonestar/analytics/distributed/gnn/: CMakeLists.txt  gnn.cpp  gnn_sync.hh
lonestar/analytics/distributed/pagerank/: pagerank_pull.cpp
lonestar/analytics/distributed/simulation/: CMakeLists.txt
tools/graph-convert/: graph-convert.cpp
